<resources>
	<string name="app_name">LateMeter</string>
	<string name="activity_teacher">Edytuj nauczyciela</string>
	<string name="activity_settings">Ustawienia</string>

	<string name="screen_lateness">Spóźnienie</string>
	<string name="screen_teachers">Nauczyciele</string>
	<string name="screen_schedule">Godziny lekcyjne</string>

	<string name="dialog_sorting">Sortuj</string>
	<string name="dialog_teacher_remove">Czy na pewno chcesz usunąć nauczyciela?</string>
	<string name="dialog_teacher_remove_message">Wszystkie dane nauczyciela zostaną usunięte</string>
	<string name="dialog_teacher_color">Wybierz kolor</string>
	<string name="dialog_schedule_hour_remove">Czy na pewno chcesz usunąć?</string>
	<string name="dialog_schedule_hour_remove_message">Wszystkie powiązania nauczycieli z tą godziną lekcyjną
		zostaną usunięte</string>

	<string name="item_settings">Ustawienia</string>
	<string name="item_teachers_sort">Sortuj</string>
	<string name="item_teacher_remove">Usuń nauczyciela</string>

	<string name="button_delete">Usuń</string>
	<string name="button_sort">Sortuj</string>
	<string name="button_teacher_arrive">Nauczyciel przyszedł</string>
	<string name="button_cancel">Anuluj</string>

	<string name="hint_teacher_name">Imię i nazwisko</string>
	<string name="hint_schedule_hour_name">Przedmiot</string>
	<string name="hint_select_teacher">Wybierz nauczyciela</string>
	<string name="hint_create_teacher">Dodaj nauczyciela</string>

	<string name="text_teacher_color">Wybierz kolor</string>
	<string name="text_now">Teraz: %s\u0020\u0020\u0020%s - %s</string>
	<string name="text_now_nothing">Aktualnie brak lekcji</string>

	<string name="message_schedule_full">Nie można dodać nowego elementu</string>

	<string name="error_teacher_name_blank">Nazwa nie może być pusta</string>
	<string name="error_schedule_hour_negative_timespan">Godzina zakończenia musi być późniejsza niż godzina
		rozpoczęcia</string>
	<string name="error_schedule_hour_overlap">Godziny lekcyjne nie mogą się pokrywać</string>
	<string name="error_schedule_hour_subject_blank">Nazwa przedmiotu nie może być pusta</string>
	<string name="error_schedule_hour_teacher_blank">Nauczyciel musi zostać wybrany</string>

	<string name="setting_schedule_hour_duration_key" translatable="false">preference_schedule_hour_duration</string>
	<string name="setting_schedule_hour_duration_title">Domyślny czas trwania lekcji</string>
	<plurals name="setting_schedule_hour_duration_summary">
		<item quantity="one">%d minuta</item>
		<item quantity="two">%d minuty</item>
		<item quantity="few">%d minuty</item>
		<item quantity="other">%d minut</item>
	</plurals>

	<string name="day_monday">Poniedziałek</string>
	<string name="day_tuesday">Wtorek</string>
	<string name="day_wednesday">Środa</string>
	<string name="day_thursday">Czwartek</string>
	<string name="day_friday">Piątek</string>
	<string name="day_saturday">Sobota</string>
	<string name="day_sunday">Niedziela</string>

	<string name="teachers_sorting_by_name_ascending">Od A do Z</string>
	<string name="teachers_sorting_by_name_descending">Od Z do A</string>
	<string name="teachers_sorting_by_average_lateness_ascending">Według średniego spóźnienia rosnąco</string>
	<string name="teachers_sorting_by_average_lateness_descending">Według średniego spóźnienia malejąco</string>

	<string name="teacher_stats_accumulated_lateness">Suma spóźnień</string>
	<string name="teacher_stats_average_lateness">Średni czas spóźnienia</string>

	<string name="default_teacher_name">Nowy nauczyciel</string>
	<string name="default_schedule_hour_duration">45</string>

	<string name="timespan_format_short">%02d:%02d</string>
	<string name="timespan_format_long">%02d:%02d:%02d</string>
	<string name="timespan_null">-</string>
	<string name="hour_separator">-</string>
	<string name="unknown">Nieznany</string>
	<string name="hour_unknown">00:00</string>
</resources>
