<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:clickable="true"
	android:focusable="true"
	android:background="?android:attr/selectableItemBackground">

	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="56dp"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:focusableInTouchMode="true">

		<TextView
			android:text="@string/unknown"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_schedule_hour_ordinal"
			android:layout_gravity="center_vertical"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
		<TextView
			android:text="@string/hour_unknown"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_schedule_hour_start"
			android:layout_gravity="center_vertical"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
			android:textColor="?attr/colorAccent"
			android:paddingTop="6dp"
			android:paddingBottom="6dp"
			android:paddingEnd="12dp"
			android:paddingStart="12dp"
			android:layout_marginStart="20dp"
			android:clickable="true"
			android:focusable="true"
			android:background="?android:attr/selectableItemBackground"/>
		<TextView
			android:text="@string/hour_separator"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_schedule_hour_separator"
			android:layout_gravity="center_vertical"
			android:layout_marginLeft="4dp"
			android:layout_marginRight="4dp"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>
		<TextView
			android:text="@string/hour_unknown"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:id="@+id/text_schedule_hour_end"
			android:layout_gravity="center_vertical"
			android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
			android:textColor="?attr/colorAccent"
			android:paddingEnd="12dp"
			android:paddingStart="12dp"
			android:paddingBottom="6dp"
			android:paddingTop="6dp"
			android:clickable="true"
			android:focusable="true"
			android:background="?android:attr/selectableItemBackground"/>
		<Space
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"/>
		<ImageButton
			android:layout_width="24dp"
			android:layout_height="24dp"
			app:srcCompat="@drawable/ic_delete_black_24dp"
			android:id="@+id/image_schedule_hour_remove"
			style="@style/AppTheme.ImageButton.Borderless"
			android:layout_gravity="center_vertical"
			android:alpha="0.84"/>
	</LinearLayout>
	<com.google.android.material.textfield.TextInputLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:id="@+id/editTextLayout_schedule_hour_subject"
		android:layout_marginBottom="8dp">

		<com.google.android.material.textfield.TextInputEditText
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:hint="@string/hint_schedule_hour_name"
			android:id="@+id/editText_schedule_hour_subject"/>
	</com.google.android.material.textfield.TextInputLayout>
	<Spinner
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/spinner_schedule_hour_teacher"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"/>
	<TextView
		android:text="@string/unknown"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:id="@+id/text_schedule_hour_error"
		android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:textColor="?attr/colorError"/>

</LinearLayout>